change screen shot locations

--- a/ASW Background Screens/ASW Background Screens.csproj
+++ b/ASW Background Screens/ASW Background Screens.csproj
@@ -138,6 +138,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="dog_icon.ico" />
+    <Content Include="Docs\Screenshot-Main.png" />
+    <Content Include="Docs\Screenshot-Sample-Save-data.png" />
+    <Content Include="Docs\Screenshot-Save-for-Print-Step-2.png" />
+    <Content Include="Docs\Screenshot-Save-for-Print.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
