--- a/ASW Background Screens/ASW-Background-Screens.csproj
+++ b/ASW Background Screens/ASW-Background-Screens.csproj
@@ -117,6 +117,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <None Include="app.manifest" />
+    <Content Include="MyConfig.cfg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -138,10 +141,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="dog_icon.ico" />
-    <Content Include="Docs\Screenshot-Main.png" />
-    <Content Include="Docs\Screenshot-Sample-Save-data.png" />
-    <Content Include="Docs\Screenshot-Save-for-Print-Step-2.png" />
-    <Content Include="Docs\Screenshot-Save-for-Print.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
